<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:gravity="center_horizontal"
              tools:context=".VerificationActivity">
    <ImageView
            android:src="@drawable/figura1"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="60dp"
            android:importantForAccessibility="no"/>
    <TextView
            android:text="@string/otp_verification"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
        <TextView
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/we_will_send_you_an"
                android:textColor="@color/gray_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"/>
        <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/one_time_password"
                android:textColor="@color/black_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/on_this_mobile_number"
            android:textColor="@color/gray_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="14dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/editNumber"
                    android:hint="@string/type_your_phone_number"
                    android:background="@drawable/background_shape"
                    android:padding="10dp"
                    android:ems="1"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:textStyle="bold|normal"
                    android:textColor="@color/gray_100"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>
            <Button
                    android:id="@+id/btnContinue"
                    android:text="@string/continuee"
                    android:textStyle="bold|normal"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/black_100"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>