<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        tools:context=".SetupProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/avatar"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_information"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            android:textColor="@color/black_100"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_set_your_name_and_an_optional_profile_image"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold|normal"
            android:textColor="@color/black_200"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="14dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/editProfileBox"
                    android:hint="@string/type_your_name"
                    android:background="@drawable/background_shape"
                    android:padding="10dp"
                    android:ems="1"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    android:textStyle="bold|normal"
                    android:textColor="@color/gray_100"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>
            <Button
                    android:id="@+id/setupProfileBtn"
                    android:text="@string/setup_profile"
                    android:textStyle="bold|normal"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/black_100"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>